examples/tree/artifacts/tests/initialize_input_checks/result.txt
| Case | ASM (CUs) | Rust (CUs) | Overhead | Overhead % |
|------|-----------|------------|----------|------------|
| User has nonzero data length | 7 | 9 | +2 | +28.6% |
| Tree account is duplicate | 9 | 11 | +2 | +22.2% |
| Tree has nonzero data length | 11 | 13 | +2 | +18.2% |
| System program is duplicate | 13 | 15 | +2 | +15.4% |
| System program wrong data length | 15 | 17 | +2 | +13.3% |
| Non-empty instruction data | 17 | 19 | +2 | +11.8% |
test tests::test_initialize_input_checks ... ok
warning: unused import: `cpi`
 --> tree/src/program.rs:4:17
  |
4 | use interface::{cpi, data, error_codes::error, input_buffer};
  |                 ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
warning: variable does not need to be mutable
   --> tree/src/program.rs:116:9
    |
116 |     let mut pda = MaybeUninit::<Address>::uninit();
    |         ----^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default
warning: variable does not need to be mutable
   --> tree/src/program.rs:117:9
    |
117 |     let mut bump = MaybeUninit::<u8>::uninit();
    |         ----^^^^
    |         |
    |         help: remove this `mut`
warning: `tree` (lib test) generated 3 warnings (run `cargo fix --lib -p tree --tests` to apply 3 suggestions)
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 7 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x2
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 9 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x2
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 9 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x5
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 11 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x5
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 11 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x3
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 13 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x3
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 13 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x6
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 15 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x6
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 15 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x4
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 17 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x4
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 17 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x7
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 19 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x7